<resources>
    <string name="app_name">VideoPlayer</string>
    <string name="start_bulletChat">开启弹幕</string>
    <string name="stop_bulletChat">停止弹幕</string>
    <string name="clear_bulletChat">清除弹幕</string>
    <string name="add_bulletChat">增加弹幕</string>
    <string name="video_start">开始/继续播放</string>
    <string name="video_stop">暂停播放</string>
    <string name="video_rest">重新播放</string>
    <string name="seek_before">向前10S</string>
    <string name="seek_after">向后10S</string>
    <string name="media_base_info">视频信息</string>
    <string name="media_base_info_desc">视频的基础信息</string>
    <string name="selector">请选择播放文件</string>
    <string name="tip_selector_file">选择播放文件</string>


    <string name="media_info_kps">%s kps</string>
    <string name="media_info_frame">%s 帧</string>

    <string name="audio_info_sample">%d kHz</string>
</resources>
